# translation_tools

./: .coderabbit.yaml  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  2026-01-16-please-analyse-this-httpmoolocalhost8089api.txt  AGENTS.md  ASEAN_TRANSLATION_IMPLEMENTATION_SUMMARY.md  ASEAN_TRANSLATION_SETUP.md  CHANGELOG.md  CLAUDE.md  CSV_TRANSLATION_INTEGRATION.md  CSV_TRANSLATION_SUMMARY.md  DEPRECATED.md  INSTALLATION.md  README.md  TRANSLATION_AUTOMATION.md  TRANSLATION_SPA_ENHANCEMENT.md  TRANSLATION_WORKFLOW.md  babel_extractors.csv  biome.json  build.json  cliff.toml  components.json  eslint.config.js  global.d.ts  jsconfig.json  package.json  pyproject.toml  tailwind.config.js  test_csv_translation.py  tsconfig.json  update_app.sh
.github/: FUNDING.yml
.github/workflows/: auto-merge.yml  ci.yml  release.yml
.serena/: project.yml
frontend/: biome.json  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  index.css
thai_translation_dashboard/: .env.production  .gitignore  SIDEBAR_SPACING_FIX.md  index.html  package.json  proxyOptions.ts  tsconfig.app.json  vite.config.ts
thai_translation_dashboard/src/: App.tsx  index.css  main.tsx
translation_dashboard/: registry.json
translation_tools/: api.py  boot.py  commands.py  create_translation_workspace.py  hooks.py  install.py  modules.txt  patches.txt  print_format.py  reinstall.py  setup.py  setup.sh  test_workspace_consolidation.py  uninstall.py
translation_tools/api/: __init__.py  account_import.py  ai_models.py  ai_translation.py  ai_translation_simple.py  app_sync_settings.py  bulk_translation.py  cache_utils.py  chat.py  cleanup_duplicates.py  common.py  components.py  config.py  csv_translation.py  debug_github_sync.py  debug_numbercard.py  download_txt.py  force_refresh_chart.py  get_invoice.py  get_invoices.py  get_preferred_font.py  get_translation.py  github_sync.py  glossary.py  installation.py  integrations.py  mcp_client.py  mcp_endpoint.py  mcp_integration.py  mcp_server.py  message.py  mo_files.py  notifications.py  payment.py  pdf.py  pdf_fonts.py  pdfmake_generator.py  po_files.py  pot_generation.py  request_trial.py  (+22 more)
translation_tools/commands/: __init__.py  cleanup_translations.py  compile_mo_files.py  gen_po.py  generate_csv.py  (+2 more)
(+567 files in other folders)
