[project]
name = "translation_tools"
authors = [
    { name = "Manot Luijiu", email = "moocoding@gmail.com"}
]
description = "AI-powered translation tools from English language to Thai language in Frappe/ERPNext ecosystem including Custom app"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "openai>=1.3.0",
    "polib>=1.2.0",
    "tqdm>=4.64.0",
    "anthropic>=0.5.0",
    "weasyprint",
    "PyPDF2",
    "num2words",
    "google-adk",
    "psutil",
    "litellm",
    "google-generativeai",
    "python-dotenv"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[project.scripts]
check_weasyprint_deps = "translation_tools.setup.check_weasyprint_deps:check_dependencies"

[project.urls]
Homepage = "https://github.com/ManotLuijiu/translation_tools"
Repository = "https://github.com/ManotLuijiu/translation_tools.git"
"Bug Reports" = "https://github.com/ManotLuijiu/translation_tools/issues"